Sentiment Analysis and Plotting on 1 Dimension - Integrated Spotify API to pull playlists

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "id": "d5cb3330-777d-44a3-9e24-2d77970e3bbe",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,76 @@
     "import re\n",
     "import os\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "from transformers import pipeline"
+    "from transformers import pipeline\n",
+    "from dotenv import load_dotenv, find_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "abc6d08d-ed24-4c50-99fe-790644ef7e2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "a2f05023-c573-404f-a399-ab6e5b8b20a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dotenv_path = find_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "470b4649-9dd6-41c8-8021-f287f515b99f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading from: \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Loading from: {dotenv_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "dcec50a6-00f2-40df-8e6d-484cfa1c042a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "token = os.getenv(\"GENIUS_ACCESS_TOKEN\")\n",
+    "print(token)"
    ]
   },
   {
